# searxng-plugin-agent

./: .gitmodules  Dockerfile  README.md  agent.py  claude.py  pyproject.toml  settings.yml  shell.nix
.github/workflows/: publish.yml
