[project]
name = "searxng-plugin-agent"
version = "0.1.0"
description = "Add an LLM agent to your SearXNG search"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points."searxng.plugins"]
agent = "agent"

[dependency-groups]
dev = ["searxng"]

[tool.uv.sources.searxng]
path = "searxng"
editable = true

[tool.pyright]
extraPaths = ['searxng']
